Modals aligned center to the screen and add button permission fix.

--- a/Hygieia_UI/UI/src/app/css/dashboardCSS.less
+++ b/Hygieia_UI/UI/src/app/css/dashboardCSS.less
@@ -529,3 +529,27 @@ input.middle:focus {
     height: 29px;
     font-size: 13px;
 }
+
+
+//modals allign center to the screen//
+.modal {
+  text-align: center;
+  padding: 0!important;
+}
+
+.modal:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px;
+}
+
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+.modal-content{
+    border:none !important;
+}
