--- a/Hygieia_UI/UI/src/app/css/detailedView.less
+++ b/Hygieia_UI/UI/src/app/css/detailedView.less
@@ -99,7 +99,7 @@
             		}
             .widget-value-pro-small{
                         font-size:15px;
-                        font-weight:400;
+                        font-weight:600;
                         color:#000;
                     }
         }
