--- a/Hygieia_UI/UI/src/app/css/projectlist.less
+++ b/Hygieia_UI/UI/src/app/css/projectlist.less
@@ -72,6 +72,7 @@
 	.title-header{
 		.closebtn-props{
 			cursor:pointer;
+			padding-left:10px;
 		}
 	}
 	.functional-header{
